# auto_vpn_connect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt  vpn_data.json
.github/workflows/: pylint.yml  python-app.yml
src/enums/: vpn_type.py
src/enums/vpn_data/: vpn_type.py
src/models/: user_switches.py
src/models/vpn_config/: abstract_vpn_config.py  global_protect_vpn_config.py  pritunl_vpn_config.py
src/models/vpn_data/: abstract_vpn_data.py  interface.py  pritunl_vpn_data.py
src/models/vpn_model/: abstract_vpn_model.py  global_protect_vpn_model.py  pritunl_vpn_model.py
src/services/: __init__.py  vpn_parser_service.py
test/enums/vpn_data/: test_vpn_type.py
test/models/vpn_data/: test_abstract_vpn_data.py  test_pritunl_vpn_data.py
test/services/: test_vpn_parser_service.py
